Fix UI bugs: filter drawer alignment, footer text color, horizontal scrollbar

--- a/css/footer.css
+++ b/css/footer.css
@@ -82,6 +82,10 @@
   opacity: 1;
 }
 
+.footer p {
+  color: inherit;
+}
+
 .footer__contact-info {
   display: flex;
   flex-direction: column;
@@ -141,3 +145,4 @@
 .footer__bottom-link:hover {
   color: var(--champagne-gold);
 }
+
