--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 main {
@@ -190,3 +191,4 @@ p {
   opacity: 1;
   transform: translateY(0);
 }
+
